feat: Website Sections

--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
 </head>
 <body>
     <h1>Welcome to Quintuplets</h1>
+
+    <ul>
+        <li>Menu</li>
+        <li>Home</li>
+        <li>Information</li>
+        <li>characters</li>
+        <li>footer</li>
+    </ul>
+
 </body>
 </html>
