feat:share roles

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <h1>Welcome to Quintuplets</h1>
 
     <ul>
-        <li>Menu</li>
-        <li>Home</li>
-        <li>Information</li>
-        <li>characters</li>
-        <li>footer</li>
+        <li>Menu - Javier</li>
+        <li>Home - Fer</li>
+        <li>Information - Fer</li>
+        <li>characters - Javier</li>
+        <li>footer - Javier and Fer</li>
     </ul>
 
 </body>
