--- a/index.html
+++ b/index.html
@@ -11,11 +11,29 @@
     <h1>Welcome to Quintuplets</h1>
 
     <ul>
+        <li>
+            <a href="">Menu</a>
+        </li>
+        <li>
+            <a href="">Home</a>
+        </li>
+        <li>
+            <a href="">Information</a>
+        </li>
+        <li>
+            <a href="">Characters</a>
+        </li>
+        <li>
+            <a href="">Footer</a>
+        </li>
+    </ul>
+
+    <ul>
         <li>Menu - Javier</li>
         <li>Home - Fer</li>
         <li>Information - Fer</li>
-        <li>characters - Javier</li>
-        <li>footer - Javier and Fer</li>
+        <li>Fharacters - Javier</li>
+        <li>Footer - Javier and Fer</li>
     </ul>
 
 </body>
